--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,10 @@
 <project>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>ru.job4j</groupId>
-	<artifactId>junior</artifactId>
+	<artifactId>git_test</artifactId>
 	<packaging>pom</packaging>
 	<version>2.0</version>
-	<name>junior</name>
+	<name>git_test</name>
 	<url>http://job4j.ru/</url>
 	
 	<properties>
@@ -17,7 +17,7 @@
 		<module>chapter_001</module>
 		<module>chapter_002</module>
 	</modules>
-	
+
 	<dependencies>
 		<dependency>
 			<groupId>org.hamcrest</groupId>
@@ -42,6 +42,14 @@
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.3</version>
+				<configuration>
+					<compilerVersion>1.8</compilerVersion>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-checkstyle-plugin</artifactId>
 				<version>2.17</version>
 				<executions>
@@ -63,12 +71,4 @@
 			</plugin>
 		</plugins>
 	</build>
-	<plugin>
-		<groupId>org.apache.maven.plugins</groupId>
-		<artifactId>maven-compiler-plugin</artifactId>
-		<version>3.3</version>
-		<configuration>
-			<compilerVersion>1.8</compilerVersion>
-		</configuration>
-	</plugin>
 </project>
