--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,11 @@
 			<version>2.10.0</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-dbcp2</artifactId>
+			<version>2.4.0</version>
+		</dependency>
 
 	</dependencies>
 
