--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,16 @@
 			<artifactId>commons-dbcp2</artifactId>
 			<version>2.4.0</version>
 		</dependency>
+		<dependency>
+			<groupId>jstl</groupId>
+			<artifactId>jstl</artifactId>
+			<version>1.2</version>
+		</dependency>
+		<dependency>
+			<groupId>taglibs</groupId>
+			<artifactId>standard</artifactId>
+			<version>1.1.2</version>
+		</dependency>
 
 	</dependencies>
 
