update file for chapter 6.8.5

--- a/pom.xml
+++ b/pom.xml
@@ -151,4 +151,19 @@
 			</plugin>
 		</plugins>
 	</build>
+
+	<profiles>
+		<profile>
+			<id>travis</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<properties>
+				<db.url>jdbc:postgresql://localhost:5432/postgres</db.url>
+				<db.username>postgres</db.username>
+				<db.password>root</db.password>
+				<db.driver>org.postgresql.Driver</db.driver>
+			</properties>
+		</profile>
+	</profiles>
 </project>
