update pom files

--- a/pom.xml
+++ b/pom.xml
@@ -194,5 +194,23 @@
 				<db.driver>org.postgresql.Driver</db.driver>
 			</properties>
 		</profile>
+		<profile>
+			<id>test</id>
+			<properties>
+				<db.url>jdbc:postgresql://localhost:5432/postgres</db.url>
+				<db.username>postgres</db.username>
+				<db.password>root</db.password>
+				<db.driver>org.postgresql.Driver</db.driver>
+			</properties>
+		</profile>
+		<profile>
+			<id>production</id>
+			<properties>
+				<db.url>jdbc:postgresql://localhost:5432/postgres</db.url>
+				<db.username>postgres</db.username>
+				<db.password>root</db.password>
+				<db.driver>org.postgresql.Driver</db.driver>
+			</properties>
+		</profile>
 	</profiles>
 </project>
