--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
 		<module>chapter_005</module>
 		<module>chapter_006</module>
 		<module>chapter_007</module>
+		<module>chapter_008</module>
 	</modules>
 
 	<dependencies>
@@ -42,7 +43,14 @@
 			<artifactId>commons-lang3</artifactId>
 			<version>3.4</version>
 		</dependency>
-		<dependency>
+        <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.6</version>
+        </dependency>
+
+        <dependency>
 			<groupId>net.jcip</groupId>
 			<artifactId>jcip-annotations</artifactId>
 			<version>1.0</version>
@@ -94,7 +102,6 @@
 			<version>1.7.4</version>
 			<scope>test</scope>
 		</dependency>
-
 
 		<dependency>
 			<groupId>org.apache.commons</groupId>
@@ -177,12 +184,32 @@
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.22.1</version>
+				<configuration>
+					<forkCount>1</forkCount>
+					<reuseForks>true</reuseForks>
+				</configuration>
+				<executions>
+					<execution>
+						<id>default-test</id>
+						<phase>test</phase>
+						<goals>
+							<goal>test</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.3</version>
 				<configuration>
 					<compilerVersion>11</compilerVersion>
 				</configuration>
 			</plugin>
+
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-checkstyle-plugin</artifactId>
@@ -204,22 +231,25 @@
 					</execution>
 				</executions>
 			</plugin>
+
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>cobertura-maven-plugin</artifactId>
+				<version>2.7</version>
+				<configuration>
+					<check>
+					</check>
+					<instrumentation>
+						<excludes>
+							<exclude>**/*</exclude>
+						</excludes>
+					</instrumentation>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
 	<profiles>
-		<profile>
-			<id>travis</id>
-			<activation>
-				<activeByDefault>true</activeByDefault>
-			</activation>
-			<properties>
-				<db.url>jdbc:postgresql://localhost:5432/postgres</db.url>
-				<db.username>postgres</db.username>
-				<db.password>root</db.password>
-				<db.driver>org.postgresql.Driver</db.driver>
-			</properties>
-		</profile>
 		<profile>
 			<id>test</id>
 			<properties>
@@ -231,6 +261,18 @@
 		</profile>
 		<profile>
 			<id>production</id>
+			<properties>
+				<db.url>jdbc:postgresql://localhost:5432/postgres</db.url>
+				<db.username>postgres</db.username>
+				<db.password>root</db.password>
+				<db.driver>org.postgresql.Driver</db.driver>
+			</properties>
+		</profile>
+		<profile>
+			<id>travis</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
 			<properties>
 				<db.url>jdbc:postgresql://localhost:5432/postgres</db.url>
 				<db.username>postgres</db.username>
