--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,39 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
+	<profiles>
+		<profile>
+			<id>test</id>
+			<properties>
+				<db.url>jdbc:postgresql://localhost:5432/postgres</db.url>
+				<db.username>postgres</db.username>
+				<db.password>root</db.password>
+				<db.driver>org.postgresql.Driver</db.driver>
+			</properties>
+		</profile>
+		<profile>
+			<id>production</id>
+			<properties>
+				<db.url>jdbc:postgresql://localhost:5432/postgres</db.url>
+				<db.username>postgres</db.username>
+				<db.password>root</db.password>
+				<db.driver>org.postgresql.Driver</db.driver>
+			</properties>
+		</profile>
+		<profile>
+			<id>travis</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<properties>
+				<db.url>jdbc:postgresql://localhost:5432/postgres</db.url>
+				<db.username>postgres</db.username>
+				<db.password>root</db.password>
+				<db.driver>org.postgresql.Driver</db.driver>
+			</properties>
+		</profile>
+	</profiles>
+
 	<modules>
 		<module>chapter_001</module>
 		<module>chapter_002</module>
@@ -144,33 +177,28 @@
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/log4j/log4j -->
 		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-api</artifactId>
+			<version>2.11.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			<version>2.11.1</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/log4j/log4j -->
+		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>1.2.17</version>
 		</dependency>
-        <dependency>
+
+
+		<dependency>
             <groupId>org.xerial</groupId>
             <artifactId>sqlite-jdbc</artifactId>
             <version>3.21.0</version>
         </dependency>
-		<!-- https://mvnrepository.com/artifact/postgresql/postgresql -->
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-api</artifactId>
-			<version>1.7.21</version>
-		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-simple -->
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-simple</artifactId>
-			<version>1.7.21</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-log4j12</artifactId>
-			<version>1.7.21</version>
-		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
 		<dependency>
@@ -207,6 +235,12 @@
 						</goals>
 					</execution>
 				</executions>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>3.0.1</version>
 			</plugin>
 
 			<plugin>
@@ -254,39 +288,27 @@
 					</instrumentation>
 				</configuration>
 			</plugin>
+
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>0.8.3</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>report</id>
+						<phase>test</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
 
-	<profiles>
-		<profile>
-			<id>test</id>
-			<properties>
-				<db.url>jdbc:postgresql://localhost:5432/postgres</db.url>
-				<db.username>postgres</db.username>
-				<db.password>root</db.password>
-				<db.driver>org.postgresql.Driver</db.driver>
-			</properties>
-		</profile>
-		<profile>
-			<id>production</id>
-			<properties>
-				<db.url>jdbc:postgresql://localhost:5432/postgres</db.url>
-				<db.username>postgres</db.username>
-				<db.password>root</db.password>
-				<db.driver>org.postgresql.Driver</db.driver>
-			</properties>
-		</profile>
-		<profile>
-			<id>travis</id>
-			<activation>
-				<activeByDefault>true</activeByDefault>
-			</activation>
-			<properties>
-				<db.url>jdbc:postgresql://localhost:5432/postgres</db.url>
-				<db.username>postgres</db.username>
-				<db.password>root</db.password>
-				<db.driver>org.postgresql.Driver</db.driver>
-			</properties>
-		</profile>
-	</profiles>
 </project>
